# pidgin-libnotify

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac
po/: ChangeLog  POTFILES.in  es.po  fr.po  hu.po  it.po  nl.po  pl.po  pt.po  pt_BR.po  sl.po
src/: Makefile.am  gaim-libnotify.c  pidgin-libnotify.c
